@@ -6,7 +6,6 @@ import com.dpw.runner.shipment.services.ReportingService.Models.Commons.Shipment
 import com.dpw.runner.shipment.services.ReportingService.Models.HawbModel;
 import com.dpw.runner.shipment.services.ReportingService.Models.ShipmentModel.*;
 import com.dpw.runner.shipment.services.ReportingService.Models.TenantModel;
-import com.dpw.runner.shipment.services.aspects.LicenseContext;
 import com.dpw.runner.shipment.services.ReportingService.Models.TruckDriverModel;
 import com.dpw.runner.shipment.services.aspects.MultitenancyAspect.ShipmentSettingsDetailsContext;
 import com.dpw.runner.shipment.services.aspects.MultitenancyAspect.TenantSettingsDetailsContext;
@@ -60,7 +59,6 @@ import org.junit.jupiter.api.parallel.ExecutionMode;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.Mockito;
-import org.mockito.MockedStatic;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.modelmapper.ModelMapper;
 
@@ -1307,6 +1305,8 @@ class HawbReportTest extends CommonMocks {
         consolidationModel.setConsolidationAddresses(Arrays.asList(partiesModel));
         consolidationModel.setReferenceNumbersList(Arrays.asList(referenceNumbersModel));
         hawbModel.setConsolidationDetails(consolidationModel);
+        hawbModel.getAwb().getAwbCargoInfo().setRaNumber("abcd");
+        hawbModel.getAwb().getAwbCargoInfo().setScreeningTime(LocalDateTime.now());
 
         List<UnlocationsResponse> unlocationsResponses = new ArrayList<>();
         UnlocationsResponse unlocationsResponse = new UnlocationsResponse();
@@ -1542,6 +1542,8 @@ class HawbReportTest extends CommonMocks {
         shipmentModel.setDeliveryDetails(delivertDetails);
         hawbModel.setShipmentDetails(shipmentModel);
         hawbModel.setAwb(hawb);
+        hawbModel.getAwb().getAwbCargoInfo().setRaNumber("abcd12");
+        hawbModel.getAwb().getAwbCargoInfo().setScreeningStatus(Collections.singletonList("abcd"));
         UsersDto usersDto = new UsersDto();
         usersDto.setUsername("UserName");
         usersDto.setCompanyId(1);
@@ -1696,111 +1698,94 @@ class HawbReportTest extends CommonMocks {
 
     @Test
     void getDocumentModel() {
-        try (MockedStatic<LicenseContext> mockedLicenseContext = mockStatic(LicenseContext.class)) {
-            mockedLicenseContext.when(LicenseContext::isDgAirLicense).thenReturn(true);
-            ShipmentSettingsDetailsContext.getCurrentTenantSettings().setAirDGFlag(true);
-            when(shipmentDao.findById(any())).thenReturn(Optional.of(shipmentDetails));
-            ShipmentModel shipmentModel = new ShipmentModel();
-            PackingModel packingModel = new PackingModel();
-            packingModel.setHazardous(true);
-            shipmentModel.setPackingList(List.of(packingModel));
-            shipmentModel.setTransportMode(Constants.TRANSPORT_MODE_AIR);
-            shipmentModel.setContainsHazardous(true);
-            shipmentModel.setConsolidationList(Arrays.asList(new ConsolidationModel()));
-            when(modelMapper.map(shipmentDetails, ShipmentModel.class)).thenReturn(shipmentModel);
-            when(awbDao.findByConsolidationId(any())).thenReturn(Arrays.asList(new Awb()));
-            mockShipmentSettings();
-            assertNotNull(hawbReport.getDocumentModel(123L));
-        }
+        ShipmentSettingsDetailsContext.getCurrentTenantSettings().setAirDGFlag(true);
+        when(shipmentDao.findById(any())).thenReturn(Optional.of(shipmentDetails));
+        ShipmentModel shipmentModel = new ShipmentModel();
+        PackingModel packingModel = new PackingModel();
+        packingModel.setHazardous(true);
+        shipmentModel.setPackingList(List.of(packingModel));
+        shipmentModel.setTransportMode(Constants.TRANSPORT_MODE_AIR);
+        shipmentModel.setContainsHazardous(true);
+        shipmentModel.setConsolidationList(Arrays.asList(new ConsolidationModel()));
+        when(modelMapper.map(shipmentDetails, ShipmentModel.class)).thenReturn(shipmentModel);
+        when(awbDao.findByConsolidationId(any())).thenReturn(Arrays.asList(new Awb()));
+        mockShipmentSettings();
+        assertNotNull(hawbReport.getDocumentModel(123L));
     }
 
     @Test
     void getDocumentModel_dgUserError() {
-        try (MockedStatic<LicenseContext> mockedLicenseContext = mockStatic(LicenseContext.class)) {
-            mockedLicenseContext.when(LicenseContext::isOceanDGLicense).thenReturn(true);
-            ShipmentSettingsDetailsContext.getCurrentTenantSettings().setAirDGFlag(true);
-            when(shipmentDao.findById(any())).thenReturn(Optional.of(shipmentDetails));
-            ShipmentModel shipmentModel = new ShipmentModel();
-            PackingModel packingModel = new PackingModel();
-            packingModel.setHazardous(true);
-            shipmentModel.setPackingList(List.of(packingModel));
-            shipmentModel.setTransportMode(Constants.TRANSPORT_MODE_AIR);
-            shipmentModel.setContainsHazardous(true);
-            shipmentModel.setConsolidationList(Arrays.asList(new ConsolidationModel()));
-            when(modelMapper.map(shipmentDetails, ShipmentModel.class)).thenReturn(shipmentModel);
-            mockShipmentSettings();
-            assertThrows(ValidationException.class, () -> hawbReport.getDocumentModel(123L));
-        }
+        ShipmentSettingsDetailsContext.getCurrentTenantSettings().setAirDGFlag(true);
+        when(shipmentDao.findById(any())).thenReturn(Optional.of(shipmentDetails));
+        ShipmentModel shipmentModel = new ShipmentModel();
+        PackingModel packingModel = new PackingModel();
+        packingModel.setHazardous(true);
+        shipmentModel.setPackingList(List.of(packingModel));
+        shipmentModel.setTransportMode(Constants.TRANSPORT_MODE_AIR);
+        shipmentModel.setContainsHazardous(true);
+        shipmentModel.setConsolidationList(Arrays.asList(new ConsolidationModel()));
+        when(modelMapper.map(shipmentDetails, ShipmentModel.class)).thenReturn(shipmentModel);
+        UserContext.getUser().setPermissions(new HashMap<>());
+        mockShipmentSettings();
+        assertThrows(ValidationException.class, () -> hawbReport.getDocumentModel(123L));
     }
 
     @Test
     void getDocumentModel_CountryAirCargoSecurity() {
-        try (MockedStatic<LicenseContext> mockedLicenseContext = mockStatic(LicenseContext.class)) {
-            mockedLicenseContext.when(LicenseContext::isAirSecurityLicense).thenReturn(false);
-            ShipmentSettingsDetailsContext.getCurrentTenantSettings()
-                .setCountryAirCargoSecurity(true);
-            when(shipmentDao.findById(any())).thenReturn(Optional.of(shipmentDetails));
-            ShipmentModel shipmentModel = new ShipmentModel();
-            PackingModel packingModel = new PackingModel();
-            packingModel.setHazardous(true);
-            shipmentModel.setPackingList(List.of(packingModel));
-            shipmentModel.setTransportMode(Constants.TRANSPORT_MODE_AIR);
-            shipmentModel.setDirection(Constants.DIRECTION_EXP);
-            shipmentModel.setConsolidationList(Arrays.asList(new ConsolidationModel()));
-            when(modelMapper.map(shipmentDetails, ShipmentModel.class)).thenReturn(shipmentModel);
+        ShipmentSettingsDetailsContext.getCurrentTenantSettings().setCountryAirCargoSecurity(true);
+        when(shipmentDao.findById(any())).thenReturn(Optional.of(shipmentDetails));
+        ShipmentModel shipmentModel = new ShipmentModel();
+        PackingModel packingModel = new PackingModel();
+        packingModel.setHazardous(true);
+        shipmentModel.setPackingList(List.of(packingModel));
+        shipmentModel.setTransportMode(Constants.TRANSPORT_MODE_AIR);
+        shipmentModel.setDirection(Constants.DIRECTION_EXP);
+        shipmentModel.setConsolidationList(Arrays.asList(new ConsolidationModel()));
+        when(modelMapper.map(shipmentDetails, ShipmentModel.class)).thenReturn(shipmentModel);
 
-            mockShipmentSettings();
+        mockShipmentSettings();
 
-            hawbReport.printType = ORIGINAL;
-            assertThrows(ValidationException.class, () -> hawbReport.getDocumentModel(123L));
-        }
+        hawbReport.printType = ORIGINAL;
+        assertThrows(ValidationException.class, () -> hawbReport.getDocumentModel(123L));
     }
 
     @Test
     void getDocumentModel_CountryAirCargoSecurity2() {
-        try (MockedStatic<LicenseContext> mockedLicenseContext = mockStatic(LicenseContext.class)) {
-            mockedLicenseContext.when(LicenseContext::isAirSecurityLicense).thenReturn(false);
-            ShipmentSettingsDetailsContext.getCurrentTenantSettings()
-                .setCountryAirCargoSecurity(true);
-            when(shipmentDao.findById(any())).thenReturn(Optional.of(shipmentDetails));
-            ShipmentModel shipmentModel = new ShipmentModel();
-            PackingModel packingModel = new PackingModel();
-            packingModel.setHazardous(true);
-            shipmentModel.setPackingList(List.of(packingModel));
-            shipmentModel.setTransportMode(Constants.TRANSPORT_MODE_AIR);
-            shipmentModel.setDirection(Constants.DIRECTION_EXP);
-            shipmentModel.setConsolidationList(Arrays.asList(new ConsolidationModel()));
-            when(modelMapper.map(shipmentDetails, ShipmentModel.class)).thenReturn(shipmentModel);
+        ShipmentSettingsDetailsContext.getCurrentTenantSettings().setCountryAirCargoSecurity(true);
+        when(shipmentDao.findById(any())).thenReturn(Optional.of(shipmentDetails));
+        ShipmentModel shipmentModel = new ShipmentModel();
+        PackingModel packingModel = new PackingModel();
+        packingModel.setHazardous(true);
+        shipmentModel.setPackingList(List.of(packingModel));
+        shipmentModel.setTransportMode(Constants.TRANSPORT_MODE_AIR);
+        shipmentModel.setDirection(Constants.DIRECTION_EXP);
+        shipmentModel.setConsolidationList(Arrays.asList(new ConsolidationModel()));
+        when(modelMapper.map(shipmentDetails, ShipmentModel.class)).thenReturn(shipmentModel);
 
-            mockShipmentSettings();
+        mockShipmentSettings();
 
-            hawbReport.printType = DRAFT;
-            assertThrows(ValidationException.class, () -> hawbReport.getDocumentModel(123L));
-        }
+        hawbReport.printType = DRAFT;
+        assertThrows(ValidationException.class, () -> hawbReport.getDocumentModel(123L));
     }
 
     @Test
     void getDocumentModel_CountryAirCargoSecurity3() {
-        try (MockedStatic<LicenseContext> mockedLicenseContext = mockStatic(LicenseContext.class)) {
-            mockedLicenseContext.when(LicenseContext::isAirSecurityLicense).thenReturn(false);
-            ShipmentSettingsDetailsContext.getCurrentTenantSettings()
-                .setCountryAirCargoSecurity(true);
-            when(shipmentDao.findById(any())).thenReturn(Optional.of(shipmentDetails));
-            ShipmentModel shipmentModel = new ShipmentModel();
-            PackingModel packingModel = new PackingModel();
-            packingModel.setHazardous(true);
-            shipmentModel.setPackingList(List.of(packingModel));
-            shipmentModel.setTransportMode(Constants.TRANSPORT_MODE_AIR);
-            shipmentModel.setDirection(Constants.DIRECTION_EXP);
-            shipmentModel.setContainsHazardous(true);
-            shipmentModel.setConsolidationList(Arrays.asList(new ConsolidationModel()));
-            when(modelMapper.map(shipmentDetails, ShipmentModel.class)).thenReturn(shipmentModel);
+        ShipmentSettingsDetailsContext.getCurrentTenantSettings().setCountryAirCargoSecurity(true);
+        when(shipmentDao.findById(any())).thenReturn(Optional.of(shipmentDetails));
+        ShipmentModel shipmentModel = new ShipmentModel();
+        PackingModel packingModel = new PackingModel();
+        packingModel.setHazardous(true);
+        shipmentModel.setPackingList(List.of(packingModel));
+        shipmentModel.setTransportMode(Constants.TRANSPORT_MODE_AIR);
+        shipmentModel.setDirection(Constants.DIRECTION_EXP);
+        shipmentModel.setContainsHazardous(true);
+        shipmentModel.setConsolidationList(Arrays.asList(new ConsolidationModel()));
+        when(modelMapper.map(shipmentDetails, ShipmentModel.class)).thenReturn(shipmentModel);
 
-            mockShipmentSettings();
+        mockShipmentSettings();
 
-            hawbReport.printType = ORIGINAL;
-            assertThrows(ValidationException.class, () -> hawbReport.getDocumentModel(123L));
-        }
+        hawbReport.printType = ORIGINAL;
+        assertThrows(ValidationException.class, () -> hawbReport.getDocumentModel(123L));
     }
 
     @Test
